# research-units-pipeline-skills

./: README.md  README.zh-CN.md  pyproject.toml
.codex/skills/agent-survey-corpus/: SKILL.md
.github/workflows/: harness.yml
docs/: ARTIFACT_INTERFACE_STANDARD.md  ARTIFACT_PACK_SCHEMA.md  AUTO_RESEARCH_HARNESS.md  DOCTOR_REPORT_SCHEMA.md  HARNESS_ARCHITECTURE.md  HARNESS_IMPROVEMENT_LOOP.md  HARNESS_OPERATING_MODEL.md  HARNESS_READINESS.md  HARNESS_READINESS_AUDIT.md  HARNESS_ROADMAP.md  HARNESS_RUN_WALKTHROUGH.md  HARNESS_SHOWCASE.md  HARNESS_SYSTEM_MAP.md  IMPROVEMENT_REPORT_SCHEMA.md  PATTERN_REGISTER.md  PIPELINE_TAXONOMY.md  PROJECT_LANGUAGE.md  RUN_AUDIT_DIFF_SCHEMA.md  RUN_AUDIT_SCHEMA.md  SHOWCASE_AUDIT_SCHEMA.md  SHOWCASE_FIXTURE_REFRESH.md  SKILL_AUDIT_SCHEMA.md  SKILL_DEPENDENCIES.md
docs/adr/: 0001-separate-semantic-skills-from-deterministic-harness.md  0002-keep-run-audit-as-markdown-plus-json.md  0003-keep-doctor-report-as-markdown-plus-json.md  0004-keep-skill-audit-as-repo-local-json-before-sarif.md  0005-keep-run-audit-diff-as-json-backed-comparison.md  0006-keep-showcase-audit-as-repo-local-json-contract.md  0007-keep-improvement-report-as-a-local-repair-map.md  0008-keep-artifact-pack-as-manifest-before-archive.md  README.md
scripts/: audit_skills.py  generate_skill_graph.py  pipeline.py  readiness_audit.py  showcase_audit.py  validate_repo.py
tests/: test_executor_recovery.py  test_harness_smoke.py  test_harness_validation.py  test_pipeline_harness_doctor.py
tooling/: executor.py  harness.py  harness_contracts.py
(+31 files in other folders)
