[project]
name = "research-units-pipeline-skills"
version = "0.1.0"
description = "Semantic research skills with a deterministic pipeline harness."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
